src/objects/Project_Team_Member__c.object
<CustomObject>
    <description>This object is used to support the Project object; it allows users to capture project resources.</description>
    <fields>
        <fullName>Allocation__c</fullName>
        <inlineHelpText>Enter whole numbers for percentages</inlineHelpText>
        <label>% Allocation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Name__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPM_Project__c</fullName>
        <inlineHelpText>Enter a related project for GSA Projects</inlineHelpText>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Project_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <label>Responsibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <formula>Name__r.FirstName &amp; &quot; &quot;&amp;Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_link__c</fullName>
        <formula>HYPERLINK(Id,  Name__r.FirstName &amp; &quot; &quot; &amp; Name__r.LastName,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member</label>
        <type>Text</type>
    </fields>
    <label>Team Members</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PTM-{0000000}</displayFormat>
        <label>Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <recordTypes>
        <fullName>Project_Central</fullName>
        <active>true</active>
        <description>Project Centeral TMs Record Type for Project Central Team Members</description>
        <label>Standard Project Team Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>